--- a/index.html
+++ b/index.html
@@ -11,6 +11,77 @@
 </head>
 
 <body>
-<!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
+  <nav>
+  <a href="#">Services</a>
+  <a href="#">Product</a>
+  <a href="#">Vision</a>
+  <a href="#">Features</a>
+  <a href="#">About</a>
+  <a href="#">Contact</a>
+<div class= "logo">
+  <img src="img/logo.png" alt="Great Idea! Company logo.">
+  </div>
+</nav>
+
+<header>
+<div class="left-container">
+  <h1>Innovation<br>
+  On<br>
+  Demand<br>
+</h1>
+<section class="button">
+  <a href="#">Get Started</a>
+</section>
+</div>
+
+<div class= "header-img">
+  <img src="img/header-img.png" alt="Image of a code snippet.">
+</div>
+</header>
+<hr>
+<section class="top-paragraphs">
+  <div>
+    <h4>Features</h4>
+    <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+</div>
+
+  <div>
+    <h4>About</h4>
+    <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+  </div>
+</section>
+
+  <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
+
+  
+  <section class="bottom-paragraphs">
+    <div>
+      <h4>Services</h4>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+  </div>
+
+<div>
+  <h4>Product</h4>
+  <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+</div>
+
+  <div>
+  <h4>Vision</h4>
+  <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+</div>
+</section>
+<hr>
+<footer>
+  <div class="contact-info">
+  <h4>Contact</h4>
+  <p>123 Way 456 Street<br>
+  Somewhere, USA<br>
+  1 (888) 888-8888<br>
+  sales@greatidea.io</p>
+</div>
+ <div class="copyright">
+  Copyright Great Idea! 2018
+    </div>
+  </footer>
 </body>
 </html>
